Update Finnish translations.
(Old svn revision: 29090)

--- a/po/fi.po
+++ b/po/fi.po
@@ -1,15 +1,15 @@
 # Translation of xfce4-panel into Finnish.
-# Copyright (C) 2002-2008 The Xfce development team.
+# Copyright (C) 2002-2009 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Ilkka Ollakka <ilkka.ollakka@iki.fi>, 2003.
-# Jari Rahkonen <jari.rahkonen@pp1.inet.fi>, 2005-2008.
+# Jari Rahkonen <jari.rahkonen@pp1.inet.fi>, 2005-2009.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-01-02 18:26+0100\n"
-"PO-Revision-Date: 2008-10-31 14:09+0200\n"
+"POT-Creation-Date: 2009-01-03 13:52+0200\n"
+"PO-Revision-Date: 2009-01-03 14:11+0200\n"
 "Last-Translator: Jari Rahkonen <jari.rahkonen@pp1.inet.fi>\n"
 "Language-Team: Finnish <translation-team-fi@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -52,14 +52,12 @@ msgid "Remove"
 msgstr "Poista"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:902 ../panel/panel.c:606
-#, fuzzy
 msgid "Add New Items..."
-msgstr "Lisää uusi osa"
+msgstr "Lisää osia..."
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:913 ../panel/panel.c:595
-#, fuzzy
 msgid "Customize Panel..."
-msgstr "Mukauta paneelia"
+msgstr "Mukauta paneelia..."
 
 #: ../panel/panel.c:621 ../plugins/actions/actions.c:284
 #: ../plugins/actions/actions.c:318 ../plugins/actions/actions.c:455
@@ -132,8 +130,8 @@ msgid "Failed to open display"
 msgstr "Näytön avaaminen epäonnistui"
 
 #: ../panel/main.c:102
-msgid "Copyright (c) 2004-2007"
-msgstr "Tekijänoikeus (c) 2004-2007"
+msgid "Copyright (c) 2004-2009"
+msgstr "Tekijänoikeus (c) 2004-2009"
 
 #: ../panel/main.c:103
 msgid "The Xfce development team. All rights reserved."
@@ -159,22 +157,20 @@ msgid "Could not open \"%s\" module"
 msgstr "Moduulin \"%s\" avaaminen epäonnistui"
 
 #: ../panel/panel-dialogs.c:610
-#, fuzzy
 msgid "Add New Items"
-msgstr "Lisää uusi osa"
+msgstr "Lisää osia"
 
 #: ../panel/panel-dialogs.c:639
-#, fuzzy
 msgid ""
 "Drag items from the list to a panel or remove\n"
 "them by dragging them back to the list."
 msgstr ""
-"Raahaa kohteita listalta paneeliin tai poista niitä raahaamalla takaisin "
-"listan päälle."
+"Raahaa kohteita listalta paneeliin tai poista\n"
+"niitä raahaamalla takaisin listan päälle."
 
 #: ../panel/panel-dialogs.c:650
 msgid "_Search:"
-msgstr ""
+msgstr "_Hae:"
 
 #: ../panel/panel-dialogs.c:878 ../panel/panel-dialogs.c:1114
 msgid "Normal Width"
@@ -222,14 +218,12 @@ msgid "Position"
 msgstr "Sijainti"
 
 #: ../panel/panel-dialogs.c:1008
-#, fuzzy
 msgid "_Fixed position"
-msgstr "Kiinteä"
+msgstr "_Kiinteä sijainti"
 
 #: ../panel/panel-dialogs.c:1014
-#, fuzzy
 msgid "Freely _moveable"
-msgstr "Liikuteltava"
+msgstr "_Liikuteltava"
 
 #: ../panel/panel-dialogs.c:1137
 msgid "Auto_hide"
@@ -270,17 +264,14 @@ msgid "Appearance"
 msgstr "Ulkonäkö"
 
 #: ../panel/panel-dialogs.c:1411
-#, fuzzy
 msgid "_Size (pixels):"
-msgstr "Koko (Kuvapisteinä)"
+msgstr "K_oko kuvapisteinä:"
 
 #: ../panel/panel-dialogs.c:1442
-#, fuzzy
 msgid "_Transparency (%):"
-msgstr "Läpinäkyvyys (%)"
+msgstr "Läpi_näkyvyys %:"
 
 #: ../panel/panel-dialogs.c:1468
-#, fuzzy
 msgid "Make active panel _opaque"
 msgstr "Tee aktiivisesta paneelista läpinäkymätön"
 
@@ -300,12 +291,11 @@ msgstr "Paneeli %d"
 
 #: ../panel/panel-dialogs.c:1615
 msgid "Remove the currently selected panel"
-msgstr ""
+msgstr "Poista valittu paneeli"
 
 #: ../panel/panel-dialogs.c:1628
-#, fuzzy
 msgid "Add a new panel"
-msgstr "Lisää uusi osa"
+msgstr "Lisää paneeli"
 
 #: ../panel/panel-dialogs.c:1688
 #: ../settings/xfce4-panel-manager.desktop.in.h:2
@@ -314,9 +304,8 @@ msgstr "Paneeli"
 
 #: ../panel/panel-dialogs.c:1695
 #: ../settings/xfce4-panel-manager.desktop.in.h:1
-#, fuzzy
 msgid "Customize the panel settings"
-msgstr "Mukauta paneelia"
+msgstr "Mukauta paneelin asetuksia"
 
 #: ../plugins/actions/actions.c:265 ../plugins/actions/actions.c:301
 #: ../plugins/actions/actions.c:456
@@ -329,18 +318,16 @@ msgid "Action Buttons"
 msgstr "Toimintopainikkeet"
 
 #: ../plugins/actions/actions.c:445
-#, fuzzy
 msgid "_Select action type:"
-msgstr "Valitse toimintotyyppi:"
+msgstr "_Valitse toimintotyyppi:"
 
 #: ../plugins/actions/actions.c:457
 msgid "Quit + Lock screen"
 msgstr "Lopeta + lukitse näyttö"
 
 #: ../plugins/actions/actions.c:468
-#, fuzzy
 msgid "_Orientation:"
-msgstr "Paneelin suunta:"
+msgstr "Paneelin _suunta:"
 
 #: ../plugins/clock/clock-dialog.c:357
 msgid "Custom"
@@ -410,19 +397,16 @@ msgid "Icon Box"
 msgstr "Kuvakelaatikko"
 
 #: ../plugins/iconbox/iconbox.c:929
-#, fuzzy
 msgid "Only show _minimized applications"
-msgstr "Näytä vain pienennetyt sovellukset"
+msgstr "Näytä vain _pienennetyt sovellukset"
 
 #: ../plugins/iconbox/iconbox.c:938
-#, fuzzy
 msgid "Show applications of _all workspaces"
-msgstr "Näytä kaikkien työtilojen sovellukset"
+msgstr "Näytä _kaikkien työtilojen sovellukset"
 
 #: ../plugins/iconbox/iconbox.c:946 ../plugins/tasklist/tasklist-dialogs.c:186
-#, fuzzy
 msgid "Use all available _space"
-msgstr "Käytä kaikki käytettävissä oleva tila"
+msgstr "_Täytä käytettävissä oleva tila"
 
 #. create menu item
 #. set some default values
@@ -430,7 +414,7 @@ msgstr "Käytä kaikki käytettävissä oleva tila"
 msgid "New Item"
 msgstr "Uusi osa"
 
-#: ../plugins/launcher/launcher-exec.c:561
+#: ../plugins/launcher/launcher-exec.c:565
 #, c-format
 msgid "Failed to launch \"%s\""
 msgstr "Kohteen \"%s\" suoritus epäonnistui"
@@ -484,32 +468,26 @@ msgid "Unnamed"
 msgstr "Nimetön"
 
 #: ../plugins/launcher/launcher-dialog.c:1123
-#, fuzzy
 msgid "_Name:"
-msgstr "_Nimi"
+msgstr "_Nimi:"
 
 #: ../plugins/launcher/launcher-dialog.c:1141
-#, fuzzy
 msgid "_Description:"
-msgstr "_Kuvaus"
+msgstr "_Kuvaus:"
 
 #: ../plugins/launcher/launcher-dialog.c:1160
-#, fuzzy
 msgid "_Icon:"
-msgstr "K_uvake"
+msgstr "K_uvake:"
 
 #: ../plugins/launcher/launcher-dialog.c:1178
-#, fuzzy
 msgid "Co_mmand:"
-msgstr "Ko_mento"
+msgstr "Ko_mento:"
 
 #: ../plugins/launcher/launcher-dialog.c:1205
-#, fuzzy
 msgid "_Working Directory:"
-msgstr "_Työkansio"
+msgstr "_Työkansio:"
 
 #: ../plugins/launcher/launcher-dialog.c:1211
-#, fuzzy
 msgid "Select a Working Directory"
 msgstr "Valitse kansio"
 
@@ -540,27 +518,22 @@ msgid "Inside Button"
 msgstr "Painikkeen sisällä"
 
 #: ../plugins/pager/pager.c:368 ../plugins/pager/pager.desktop.in.in.h:2
-#, fuzzy
 msgid "Workspace Switcher"
-msgstr "Työtila %d"
+msgstr "Työtilanvaihtaja"
 
 #: ../plugins/pager/pager.c:397
-#, fuzzy
 msgid "Number _of rows:"
-msgstr "Rivien lukumäärä:"
+msgstr "Rivien luku_määrä:"
 
 #: ../plugins/pager/pager.c:401
-#, fuzzy
 msgid "Number _of columns:"
-msgstr "Sarakkeiden lukumäärä:"
+msgstr "Sarakkeiden luku_määrä:"
 
 #: ../plugins/pager/pager.c:418
-#, fuzzy
 msgid "Switch workspaces using the mouse _wheel"
-msgstr "Hiiren rulla vaihtaa työtilaa"
+msgstr "Hiiren _rulla vaihtaa työtilaa"
 
 #: ../plugins/pager/pager.c:426
-#, fuzzy
 msgid "Show workspace _names"
 msgstr "Näytä _työtilojen nimet"
 
@@ -575,12 +548,10 @@ msgstr "Erottimen tyyli"
 
 #. space
 #: ../plugins/separator/separator.c:435
-#, fuzzy
 msgid "_Empty space"
 msgstr "_Tyhjä tila"
 
 #: ../plugins/separator/separator.c:444
-#, fuzzy
 msgid "E_xpanding empty space"
 msgstr "_Laajeneva tyhjä tila"
 
@@ -609,14 +580,12 @@ msgstr "Piilota ikkunat ja näytä työpöytä"
 #: ../plugins/systray/xfce-tray-plugin.c:71
 #: ../plugins/systray/xfce-tray-dialogs.c:334
 #: ../plugins/systray/systray.desktop.in.in.h:2
-#, fuzzy
 msgid "Notification Area"
-msgstr "Kiireellisyyshuomautus"
+msgstr "Ilmoitusalue"
 
 #: ../plugins/systray/xfce-tray-plugin.c:98
-#, fuzzy
 msgid "There is already a notification area running on this screen"
-msgstr "Näytöllä on jo järjestelmälokero"
+msgstr "Näytöllä on jo ilmoitusalue"
 
 #. message
 #: ../plugins/systray/xfce-tray-plugin.c:219
@@ -625,12 +594,12 @@ msgstr "Lokeronhallinta kadotti valintansa"
 
 #: ../plugins/systray/xfce-tray-dialogs.c:281
 msgid "Are you sure you want to clear the list of known applications?"
-msgstr "Haluatko varmasti poistaa työtilan \"%s\"?"
+msgstr "Haluatko varmasti tyhjentää tunnettujen sovellusten listan?"
 
 #. number of rows
 #: ../plugins/systray/xfce-tray-dialogs.c:375
 msgid "_Number of rows:"
-msgstr "Rivien _lukumäärä:"
+msgstr "Rivien luku_määrä:"
 
 #. applications
 #: ../plugins/systray/xfce-tray-dialogs.c:390
@@ -649,19 +618,16 @@ msgid "Task List"
 msgstr "Tehtävälista"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:172
-#, fuzzy
 msgid "_Minimum width:"
-msgstr "Vähimmäisleveys:"
+msgstr "_Vähimmäisleveys:"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:193
-#, fuzzy
 msgid "Use _flat buttons"
-msgstr "Käytä litteitä painikkeita"
+msgstr "Käytä litteitä _painikkeita"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:199
-#, fuzzy
 msgid "Show _handle"
-msgstr "Näytä kahva"
+msgstr "Näytä k_ahva"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:211
 msgid "Show tasks from _all workspaces"
@@ -670,7 +636,7 @@ msgstr "Näytä _kaikkien työtilojen tehtävät"
 #. keep order in sync with WnckTasklistGroupingType
 #: ../plugins/tasklist/tasklist-dialogs.c:221
 msgid "Never group tasks"
-msgstr "Älä koskaan ryhmitä tehtäviä"
+msgstr "Älä ryhmitä tehtäviä"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:222
 msgid "Automatically group tasks"
@@ -779,9 +745,8 @@ msgid "Program launcher with optional menu"
 msgstr "Sovelluskäynnistin, johon voi liittää valikon"
 
 #: ../plugins/pager/pager.desktop.in.in.h:1
-#, fuzzy
 msgid "Switch between virtual desktops"
-msgstr "Kaikkien virtuaalisten työpöytien pienoisnäkymä"
+msgstr "Siirry virtuaalityöpöytien välillä"
 
 #: ../plugins/separator/separator.desktop.in.in.h:1
 msgid "Adds a space or a line between panel items"
@@ -796,9 +761,8 @@ msgid "Toggle desktop show/hide"
 msgstr "Näytä tai piilota työpöytä"
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
-#, fuzzy
 msgid "Area where notification icons appear"
-msgstr "Näytä järjestelmäkuvakkeet"
+msgstr "Ilmoituskuvakkeille varattu alue"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
 msgid "Show all running applications"
@@ -811,33 +775,3 @@ msgstr "Näytä lista käytettävissä olevista ikkunoista"
 #: ../settings/xfce4-panel-manager.desktop.in.h:3
 msgid "Panel Manager"
 msgstr "Paneelin hallinta"
-
-#~ msgid "Pager"
-#~ msgstr "Työtilan vaihtaja"
-
-#~ msgid "System Tray"
-#~ msgstr "Järjestelmälokero"
-
-#~ msgid "Add Items"
-#~ msgstr "Lisää osia"
-
-#~ msgid "Add Items to the Panel"
-#~ msgstr "Lisää osia paneeliin"
-
-#~ msgid "Available Items"
-#~ msgstr "Käytettävissä olevat osat"
-
-#~ msgid "Remove Panel"
-#~ msgstr "Poista paneeli"
-
-#~ msgid "New Panel"
-#~ msgstr "Lisää paneeli"
-
-#~ msgid "Panel Actions"
-#~ msgstr "Paneelin toiminnot"
-
-#~ msgid "Program Launcher"
-#~ msgstr "Sovelluskäynnistin"
-
-#~ msgid "Xfce 4 Panel Manager"
-#~ msgstr "Paneelin hallinta"
