--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-03  Michal Várady <miko.vaji@gmail.com>
+
+	* cs.po: Czech translation updated
+
 2008-01-03  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
 
 	* fi.po: Update Finnish translation.
