Basque translation update
(Old svn revision: 29099)

--- a/po/eu.po
+++ b/po/eu.po
@@ -4,13 +4,13 @@
 # This file is distributed under the same license as the xfce4-panel package.
 #
 # Jon Latorre Martinez <patataman@airtel.net>, 2003.
-# Piarres Beobide Egaña <pi@beobide.net>, 2004, 2005, 2006, 2007, 2008.
+# Piarres Beobide Egaña <pi@beobide.net>, 2004, 2005, 2006, 2007, 2008, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: eu\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-01-02 18:26+0100\n"
-"PO-Revision-Date: 2008-05-02 23:12+0200\n"
+"PO-Revision-Date: 2009-01-06 00:55+0100\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
 "Language-Team: Euskara <debian-l10n-basque@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: eu\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Pootle 1.2.0\n"
+"X-Generator: KBabel 1.11.4\n"
 
 #. dialogs are annoying, just spit out a warning
 #: ../libxfce4panel/xfce-panel-external-item.c:169
@@ -32,8 +32,7 @@ msgid "Remove \"%s\"?"
 msgstr "\"%s\" ezabatu?"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:620
-msgid ""
-"The item will be removed from the panel and its configuration will be lost."
+msgid "The item will be removed from the panel and its configuration will be lost."
 msgstr ""
 "Elementu hau paneletik ezabatua izango da eta bere konfigurazioa galdu "
 "egingo da."
@@ -58,14 +57,12 @@ msgid "Remove"
 msgstr "Kendu"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:902 ../panel/panel.c:606
-#, fuzzy
 msgid "Add New Items..."
-msgstr "Elementu berria gehitu"
+msgstr "Gehitu elementu berriak..."
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:913 ../panel/panel.c:595
-#, fuzzy
 msgid "Customize Panel..."
-msgstr "Panela pertsonalizatu"
+msgstr "Pertsonalizatu panela..."
 
 #: ../panel/panel.c:621 ../plugins/actions/actions.c:284
 #: ../plugins/actions/actions.c:318 ../plugins/actions/actions.c:455
@@ -165,38 +162,36 @@ msgid "Could not open \"%s\" module"
 msgstr "Ezin da \"%s\" modulua ireki"
 
 #: ../panel/panel-dialogs.c:610
-#, fuzzy
 msgid "Add New Items"
-msgstr "Elementu berria gehitu"
+msgstr "Gehitu elementu berriak"
 
 #: ../panel/panel-dialogs.c:639
-#, fuzzy
 msgid ""
 "Drag items from the list to a panel or remove\n"
 "them by dragging them back to the list."
 msgstr ""
-"Eraman elementuak zerrendatik panel batetara edo ezabatzeko elementuak "
-"zerrendara eraman berriz."
+"Eraman elementuak zerrendatik panel batetara edo\n"
+" ezabatzeko elementuak zerrendara eraman berriz."
 
 #: ../panel/panel-dialogs.c:650
 msgid "_Search:"
-msgstr ""
+msgstr "_Bilatu:"
 
 #: ../panel/panel-dialogs.c:878 ../panel/panel-dialogs.c:1114
 msgid "Normal Width"
-msgstr "Zabalera Arrunta"
+msgstr "Zabalera arrunta"
 
 #: ../panel/panel-dialogs.c:879 ../panel/panel-dialogs.c:1115
 msgid "Full Width"
-msgstr "Zabalera Osoa"
+msgstr "Zabalera osoa"
 
 #: ../panel/panel-dialogs.c:883 ../panel/panel-dialogs.c:1119
 msgid "Normal Height"
-msgstr "Altuera Arrunta"
+msgstr "Altuera arrunta"
 
 #: ../panel/panel-dialogs.c:884 ../panel/panel-dialogs.c:1120
 msgid "Full Height"
-msgstr "Altuera Osoa"
+msgstr "Altuera osoa"
 
 #: ../panel/panel-dialogs.c:892 ../panel/panel-dialogs.c:1129
 msgid "Span Monitors"
@@ -228,14 +223,12 @@ msgid "Position"
 msgstr "Kokalekua"
 
 #: ../panel/panel-dialogs.c:1008
-#, fuzzy
 msgid "_Fixed position"
-msgstr "Kokaleku Finkoa"
+msgstr "Kokaleku _finkoa"
 
 #: ../panel/panel-dialogs.c:1014
-#, fuzzy
 msgid "Freely _moveable"
-msgstr "Libreki mugigarria"
+msgstr "Libreki _mugigarria"
 
 #: ../panel/panel-dialogs.c:1137
 msgid "Auto_hide"
@@ -263,7 +256,7 @@ msgstr "Bi alboetan"
 
 #: ../panel/panel-dialogs.c:1270
 msgid "Select Monitor"
-msgstr "Monitorea Aukeratu"
+msgstr "Hautatu monitorea"
 
 #. appearance settings
 #. appearance
@@ -276,23 +269,20 @@ msgid "Appearance"
 msgstr "Itxura"
 
 #: ../panel/panel-dialogs.c:1411
-#, fuzzy
 msgid "_Size (pixels):"
-msgstr "Tamaina (pixel):"
+msgstr "_Tamaina (pixel):"
 
 #: ../panel/panel-dialogs.c:1442
-#, fuzzy
 msgid "_Transparency (%):"
-msgstr "Gardentasuna (%):"
+msgstr "_Gardentasuna (%):"
 
 #: ../panel/panel-dialogs.c:1468
-#, fuzzy
 msgid "Make active panel _opaque"
-msgstr "Panel aktiboa belztu"
+msgstr "Panel aktiboa _belztu"
 
 #: ../panel/panel-dialogs.c:1481
 msgid "Popup position:"
-msgstr "Popup Kokalekua"
+msgstr "Popup kokalekua"
 
 #: ../panel/panel-dialogs.c:1491
 msgid "Automatic"
@@ -302,16 +292,15 @@ msgstr "Automatikoa"
 #: ../panel/panel-dialogs.c:1596
 #, c-format
 msgid "Panel %d"
-msgstr "%d Panela"
+msgstr "%d panela"
 
 #: ../panel/panel-dialogs.c:1615
 msgid "Remove the currently selected panel"
-msgstr ""
+msgstr "Ezabahatu hautaturik dagoen panela"
 
 #: ../panel/panel-dialogs.c:1628
-#, fuzzy
 msgid "Add a new panel"
-msgstr "Elementu berriak gehitu"
+msgstr "Gehitu panel berri bat"
 
 #: ../panel/panel-dialogs.c:1688
 #: ../settings/xfce4-panel-manager.desktop.in.h:2
@@ -320,14 +309,13 @@ msgstr "Panela"
 
 #: ../panel/panel-dialogs.c:1695
 #: ../settings/xfce4-panel-manager.desktop.in.h:1
-#, fuzzy
 msgid "Customize the panel settings"
-msgstr "Panela pertsonalizatu"
+msgstr "Pertsonalizatu panel ezapenak"
 
 #: ../plugins/actions/actions.c:265 ../plugins/actions/actions.c:301
 #: ../plugins/actions/actions.c:456
 msgid "Lock screen"
-msgstr "Pantaila blokeatu"
+msgstr "Blokeatu pantaila"
 
 #: ../plugins/actions/actions.c:417
 #: ../plugins/actions/actions.desktop.in.in.h:1
@@ -335,18 +323,16 @@ msgid "Action Buttons"
 msgstr "Ekintza botoiak"
 
 #: ../plugins/actions/actions.c:445
-#, fuzzy
 msgid "_Select action type:"
-msgstr "Ekintza mota hautatu:"
+msgstr "_Hautatu ekintza mota:"
 
 #: ../plugins/actions/actions.c:457
 msgid "Quit + Lock screen"
 msgstr "Pantaila blokeatu + Itxi"
 
 #: ../plugins/actions/actions.c:468
-#, fuzzy
 msgid "_Orientation:"
-msgstr "Orientazioa:"
+msgstr "N_orabidea:"
 
 #: ../plugins/clock/clock-dialog.c:357
 msgid "Custom"
@@ -354,7 +340,7 @@ msgstr "Pertsonalizatu"
 
 #: ../plugins/clock/clock-dialog.c:411
 msgid "Display _seconds"
-msgstr "_Segunduak bistarazi"
+msgstr "Bistarazi _segunduak"
 
 #: ../plugins/clock/clock-dialog.c:420
 msgid "Use 24-_hour clock"
@@ -398,37 +384,34 @@ msgstr "LCD"
 #: ../plugins/clock/clock-dialog.c:520
 #: ../plugins/systray/xfce-tray-dialogs.c:363
 msgid "Show _frame"
-msgstr "_Markoa Bistarazi"
+msgstr "Bistarazi _markoa"
 
 #. tooltip settings
 #: ../plugins/clock/clock-dialog.c:527
 msgid "Tooltip Format"
-msgstr "Aholku Formatua"
+msgstr "Aholku formatua"
 
 #. clock settings
 #: ../plugins/clock/clock-dialog.c:554
 msgid "Clock Options"
-msgstr "Ordulari Aukerak"
+msgstr "Ordulari aukerak"
 
 #: ../plugins/iconbox/iconbox.c:906
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
 msgid "Icon Box"
-msgstr "Ikono Kutxa"
+msgstr "Ikono kutxa"
 
 #: ../plugins/iconbox/iconbox.c:929
-#, fuzzy
 msgid "Only show _minimized applications"
-msgstr "Bakarrik txikituriko aplikazioak bistarazi"
+msgstr "Bakarrik _txikituriko aplikazioak bistarazi"
 
 #: ../plugins/iconbox/iconbox.c:938
-#, fuzzy
 msgid "Show applications of _all workspaces"
-msgstr "Bistarazi idazmahai birtual guztietako aplikazioak"
+msgstr "Bistarazi idazmahai birtual _guztietako aplikazioak"
 
 #: ../plugins/iconbox/iconbox.c:946 ../plugins/tasklist/tasklist-dialogs.c:186
-#, fuzzy
 msgid "Use all available _space"
-msgstr "Erabilgarri dagoen leku dena erabili"
+msgstr "Erabilgarri dagoen leku _dena erabili"
 
 #. create menu item
 #. set some default values
@@ -447,7 +430,7 @@ msgstr "Ikonorik ez"
 
 #: ../plugins/launcher/launcher-dialog.c:631
 msgid "Select an Application"
-msgstr "Aplikazio bat Hautatu:"
+msgstr "Hautatu aplikazio bat:"
 
 #: ../plugins/launcher/launcher-dialog.c:641
 msgid "All Files"
@@ -490,38 +473,32 @@ msgid "Unnamed"
 msgstr "Izengabea"
 
 #: ../plugins/launcher/launcher-dialog.c:1123
-#, fuzzy
 msgid "_Name:"
-msgstr "Ize_na"
+msgstr "Ize_na:"
 
 #: ../plugins/launcher/launcher-dialog.c:1141
-#, fuzzy
 msgid "_Description:"
-msgstr "A_zalpena"
+msgstr "A_zalpena:"
 
 #: ../plugins/launcher/launcher-dialog.c:1160
-#, fuzzy
 msgid "_Icon:"
-msgstr "_Ikonoa"
+msgstr "_Ikonoa:"
 
 #: ../plugins/launcher/launcher-dialog.c:1178
-#, fuzzy
 msgid "Co_mmand:"
-msgstr "Ko_mandoa"
+msgstr "Ko_mandoa:"
 
 #: ../plugins/launcher/launcher-dialog.c:1205
-#, fuzzy
 msgid "_Working Directory:"
-msgstr "_Lan Direktorioa"
+msgstr "_Lan direktorioa:"
 
 #: ../plugins/launcher/launcher-dialog.c:1211
-#, fuzzy
 msgid "Select a Working Directory"
-msgstr "Direktorio bat Aukeratu"
+msgstr "Hautatu lan direktorio bat"
 
 #: ../plugins/launcher/launcher-dialog.c:1232
 msgid "Run in _terminal"
-msgstr "_terminalean exekutatu"
+msgstr "_Terminalean exekutatu"
 
 #: ../plugins/launcher/launcher-dialog.c:1248
 msgid "Use _startup notification"
@@ -543,32 +520,27 @@ msgstr "Lehenetsia"
 
 #: ../plugins/launcher/launcher-dialog.c:1563
 msgid "Inside Button"
-msgstr "Barne Botoia"
+msgstr "Barne botoia"
 
 #: ../plugins/pager/pager.c:368 ../plugins/pager/pager.desktop.in.in.h:2
-#, fuzzy
 msgid "Workspace Switcher"
-msgstr "%d Idazmahaia"
+msgstr "Idazmahaia aldatzailea"
 
 #: ../plugins/pager/pager.c:397
-#, fuzzy
 msgid "Number _of rows:"
-msgstr "Lerro kopurua:"
+msgstr "Lerro _kopurua:"
 
 #: ../plugins/pager/pager.c:401
-#, fuzzy
 msgid "Number _of columns:"
-msgstr "Zutabe kopurua:"
+msgstr "_Zutabe kopurua:"
 
 #: ../plugins/pager/pager.c:418
-#, fuzzy
 msgid "Switch workspaces using the mouse _wheel"
-msgstr "Idazmahai birtualak sagu gurpilaren bidez txandakatu"
+msgstr "Idazmahai birtualak sagu _gurpilaren bidez txandakatu"
 
 #: ../plugins/pager/pager.c:426
-#, fuzzy
 msgid "Show workspace _names"
-msgstr "Idazmahai izenak bistarazi"
+msgstr "Ikusi idazmahai ize_nak"
 
 #: ../plugins/separator/separator.c:409
 #: ../plugins/separator/separator.desktop.in.in.h:2
@@ -581,14 +553,12 @@ msgstr "Bereizle estiloa"
 
 #. space
 #: ../plugins/separator/separator.c:435
-#, fuzzy
 msgid "_Empty space"
 msgstr "L_eku librea"
 
 #: ../plugins/separator/separator.c:444
-#, fuzzy
 msgid "E_xpanding empty space"
-msgstr "L_eku librea hedatzen"
+msgstr "Leku librea he_datzen"
 
 #: ../plugins/separator/separator.c:453
 msgid "_Line"
@@ -615,14 +585,12 @@ msgstr "Leihoan ezkutatu eta idazmahaia bistarazi"
 #: ../plugins/systray/xfce-tray-plugin.c:71
 #: ../plugins/systray/xfce-tray-dialogs.c:334
 #: ../plugins/systray/systray.desktop.in.in.h:2
-#, fuzzy
 msgid "Notification Area"
-msgstr "Larrialdiko berri-ematea"
+msgstr "Berri-emate eremua"
 
 #: ../plugins/systray/xfce-tray-plugin.c:98
-#, fuzzy
 msgid "There is already a notification area running on this screen"
-msgstr "Pantaila honetan sistema barra bat martxan dago"
+msgstr "DAgoeneko badago berri-emate eremu bat pantaila honetan"
 
 #. message
 #: ../plugins/systray/xfce-tray-plugin.c:219
@@ -655,19 +623,16 @@ msgid "Task List"
 msgstr "Zeregin zerrenda"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:172
-#, fuzzy
 msgid "_Minimum width:"
-msgstr "Gutxieneko zabalera:"
+msgstr "_Gutxieneko zabalera:"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:193
-#, fuzzy
 msgid "Use _flat buttons"
-msgstr "Botoi mugikorrak erabili"
+msgstr "Botoi _mugikorrak erabili"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:199
-#, fuzzy
 msgid "Show _handle"
-msgstr "Ikusi kudeatzailea"
+msgstr "Ikusi _kudeatzailea"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:211
 msgid "Show tasks from _all workspaces"
@@ -704,7 +669,7 @@ msgstr "%d Idazmahaia"
 #: ../plugins/windowlist/windowlist.c:592
 #: ../plugins/windowlist/windowlist.c:598
 msgid "Add workspace"
-msgstr "Idazmahai gehitu"
+msgstr "Gehitu idazmahaia"
 
 #: ../plugins/windowlist/windowlist.c:617
 #, c-format
@@ -785,9 +750,8 @@ msgid "Program launcher with optional menu"
 msgstr "Programa abiarazlea aukerako menu batez"
 
 #: ../plugins/pager/pager.desktop.in.in.h:1
-#, fuzzy
 msgid "Switch between virtual desktops"
-msgstr "Idazmahai birtualen ikuspegi txikitua"
+msgstr "Idazmahai birtualen artean aldatu"
 
 #: ../plugins/separator/separator.desktop.in.in.h:1
 msgid "Adds a space or a line between panel items"
@@ -802,9 +766,8 @@ msgid "Toggle desktop show/hide"
 msgstr "Txandakatu idazmahai ezkutatu/bistarazi"
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
-#, fuzzy
 msgid "Area where notification icons appear"
-msgstr "Bistarazi notifikazio ikonoak"
+msgstr "berrie-mate ikonoak egertzen diren eremua"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
 msgid "Show all running applications"
@@ -818,59 +781,3 @@ msgstr "Leiho erabilgarri zerrenda bistarazi"
 msgid "Panel Manager"
 msgstr "Panel Kudeatzailea:"
 
-#~ msgid "Pager"
-#~ msgstr "Orrialdekatzailea"
-
-#~ msgid "System Tray"
-#~ msgstr "Sistema barra"
-
-#~ msgid "Command Prompt"
-#~ msgstr "Komando lerroa"
-
-#~ msgid "X terminal emulator"
-#~ msgstr "X terminal emuladorea"
-
-#~ msgid "Edit text files"
-#~ msgstr "Testu fitxategiak editatu"
-
-#~ msgid "Editor"
-#~ msgstr "Editorea"
-
-#~ msgid "File Manager"
-#~ msgstr "Fitxategi kudeatzailea"
-
-#~ msgid "Manage files and folders"
-#~ msgstr "Fitxategi eta karpetak kudeatu"
-
-#~ msgid "Surf the internet"
-#~ msgstr "Internet nabigatu"
-
-#~ msgid "Web Browser"
-#~ msgstr "Web Nabigatzailea"
-
-#~ msgid "Add Items"
-#~ msgstr "Elementuak gehitu"
-
-#~ msgid "Add Items to the Panel"
-#~ msgstr "Elementuak gehitu Panelera"
-
-#~ msgid "Available Items"
-#~ msgstr "Elementu erabilgarriak"
-
-#~ msgid "Remove Panel"
-#~ msgstr "Panela Ezabatu"
-
-#~ msgid "New Panel"
-#~ msgstr "Panel Berria"
-
-#~ msgid "Panel Actions"
-#~ msgstr "Panel Ekintzak"
-
-#~ msgid "Program Launcher"
-#~ msgstr "Abiarazleari menua gehitu"
-
-#~ msgid "Failed to launch 'xfce4-panel -c'"
-#~ msgstr "Huts 'xfce4-panel -c' abiaraztekoan"
-
-#~ msgid "Xfce 4 Panel Manager"
-#~ msgstr "Xfce 4 panel kudeatzailea"
