--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-06  Piarres Beobide <pi@beobide.net>
+
+        * eu.po: Basque translation update
+
 2009-01-03  Michal Várady <miko.vaji@gmail.com>
 
 	* cs.po: Czech translation updated
