* xfce4-panel.pot, *.po: Update translation files to make sure 	  they are in sync for the string-freeze release.
(Old svn revision: 29133)

--- a/po/eu.po
+++ b/po/eu.po
@@ -32,7 +32,8 @@ msgid "Remove \"%s\"?"
 msgstr "\"%s\" ezabatu?"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:620
-msgid "The item will be removed from the panel and its configuration will be lost."
+msgid ""
+"The item will be removed from the panel and its configuration will be lost."
 msgstr ""
 "Elementu hau paneletik ezabatua izango da eta bere konfigurazioa galdu "
 "egingo da."
@@ -780,4 +781,3 @@ msgstr "Leiho erabilgarri zerrenda bistarazi"
 #: ../settings/xfce4-panel-manager.desktop.in.h:3
 msgid "Panel Manager"
 msgstr "Panel Kudeatzailea:"
-
