--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-01-11	Jannis Pohlmann <jannis@xfce.org>
+
+	* xfce4-panel.pot, *.po: Update translation files to make sure 
+	  they are in sync for the string-freeze release.
+
 2009-01-06  Piarres Beobide <pi@beobide.net>
 
         * eu.po: Basque translation update
